refactor: add target config reference to target
