# pkg/apiclient/model_target.go
@@ -21,13 +21,12 @@ var _ MappedNullable = &Target{}
 
 // Target struct for Target
 type Target struct {
-	Default bool   `json:"default"`
-	Id      string `json:"id"`
-	Name    string `json:"name"`
-	// JSON encoded map of options
-	Options      string             `json:"options"`
-	ProviderInfo TargetProviderInfo `json:"providerInfo"`
-	Workspaces   []Workspace        `json:"workspaces,omitempty"`
+	Default          bool         `json:"default"`
+	Id               string       `json:"id"`
+	Name             string       `json:"name"`
+	TargetConfig     TargetConfig `json:"targetConfig"`
+	TargetConfigName string       `json:"targetConfigName"`
+	Workspaces       []Workspace  `json:"workspaces,omitempty"`
 }
 
 type _Target Target
@@ -36,13 +35,13 @@ type _Target Target
 // This constructor will assign default values to properties that have it defined,
 // and makes sure properties required by API are set, but the set of arguments
 // will change when the set of required properties is changed
-func NewTarget(default_ bool, id string, name string, options string, providerInfo TargetProviderInfo) *Target {
+func NewTarget(default_ bool, id string, name string, targetConfig TargetConfig, targetConfigName string) *Target {
 	this := Target{}
 	this.Default = default_
 	this.Id = id
 	this.Name = name
-	this.Options = options
-	this.ProviderInfo = providerInfo
+	this.TargetConfig = targetConfig
+	this.TargetConfigName = targetConfigName
 	return &this
 }
 
@@ -126,52 +125,52 @@ func (o *Target) SetName(v string) {
 	o.Name = v
 }
 
-// GetOptions returns the Options field value
-func (o *Target) GetOptions() string {
+// GetTargetConfig returns the TargetConfig field value
+func (o *Target) GetTargetConfig() TargetConfig {
+	if o == nil {
+		var ret TargetConfig
+		return ret
+	}
+
+	return o.TargetConfig
+}
+
+// GetTargetConfigOk returns a tuple with the TargetConfig field value
+// and a boolean to check if the value has been set.
+func (o *Target) GetTargetConfigOk() (*TargetConfig, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.TargetConfig, true
+}
+
+// SetTargetConfig sets field value
+func (o *Target) SetTargetConfig(v TargetConfig) {
+	o.TargetConfig = v
+}
+
+// GetTargetConfigName returns the TargetConfigName field value
+func (o *Target) GetTargetConfigName() string {
 	if o == nil {
 		var ret string
 		return ret
 	}
 
-	return o.Options
+	return o.TargetConfigName
 }
 
-// GetOptionsOk returns a tuple with the Options field value
+// GetTargetConfigNameOk returns a tuple with the TargetConfigName field value
 // and a boolean to check if the value has been set.
-func (o *Target) GetOptionsOk() (*string, bool) {
+func (o *Target) GetTargetConfigNameOk() (*string, bool) {
 	if o == nil {
 		return nil, false
 	}
-	return &o.Options, true
+	return &o.TargetConfigName, true
 }
 
-// SetOptions sets field value
-func (o *Target) SetOptions(v string) {
-	o.Options = v
-}
-
-// GetProviderInfo returns the ProviderInfo field value
-func (o *Target) GetProviderInfo() TargetProviderInfo {
-	if o == nil {
-		var ret TargetProviderInfo
-		return ret
-	}
-
-	return o.ProviderInfo
-}
-
-// GetProviderInfoOk returns a tuple with the ProviderInfo field value
-// and a boolean to check if the value has been set.
-func (o *Target) GetProviderInfoOk() (*TargetProviderInfo, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.ProviderInfo, true
-}
-
-// SetProviderInfo sets field value
-func (o *Target) SetProviderInfo(v TargetProviderInfo) {
-	o.ProviderInfo = v
+// SetTargetConfigName sets field value
+func (o *Target) SetTargetConfigName(v string) {
+	o.TargetConfigName = v
 }
 
 // GetWorkspaces returns the Workspaces field value if set, zero value otherwise.
@@ -219,8 +218,8 @@ func (o Target) ToMap() (map[string]interface{}, error) {
 	toSerialize["default"] = o.Default
 	toSerialize["id"] = o.Id
 	toSerialize["name"] = o.Name
-	toSerialize["options"] = o.Options
-	toSerialize["providerInfo"] = o.ProviderInfo
+	toSerialize["targetConfig"] = o.TargetConfig
+	toSerialize["targetConfigName"] = o.TargetConfigName
 	if !IsNil(o.Workspaces) {
 		toSerialize["workspaces"] = o.Workspaces
 	}
@@ -235,8 +234,8 @@ func (o *Target) UnmarshalJSON(data []byte) (err error) {
 		"default",
 		"id",
 		"name",
-		"options",
-		"providerInfo",
+		"targetConfig",
+		"targetConfigName",
 	}
 
 	allProperties := make(map[string]interface{})
