# pkg/views/target/info/view.go
@@ -31,9 +31,9 @@ func Render(target *apiclient.TargetDTO, forceUnstyled bool) {
 
 	output += getInfoLine("ID", target.Id) + "\n"
 
-	providerLabel := target.ProviderInfo.Name
-	if target.ProviderInfo.Label != nil {
-		providerLabel = *target.ProviderInfo.Label
+	providerLabel := target.TargetConfig.ProviderInfo.Name
+	if target.TargetConfig.ProviderInfo.Label != nil {
+		providerLabel = *target.TargetConfig.ProviderInfo.Label
 	}
 
 	output += getInfoLine("Provider", providerLabel) + "\n"
@@ -42,7 +42,7 @@ func Render(target *apiclient.TargetDTO, forceUnstyled bool) {
 		output += getInfoLine("Default", "Yes") + "\n"
 	}
 
-	output += getInfoLine("Options", target.Options) + "\n"
+	output += getInfoLine("Options", target.TargetConfig.Options) + "\n"
 
 	if target.Info != nil {
 		output += getInfoLine("Metadata", *target.Info.ProviderMetadata) + "\n"
